# web-app

./: .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  .repomixignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose.yaml  opencode.json  pyproject.toml
.opencode/agent/: improve-commits.md
.opencode/agents/: changelog.md  improve-commits.md
.opencode/commands/: graphify-explain.md  graphify-path.md  graphify-query.md  graphify.md  setup-constitution.md  speckit.git.initialize.md  speckit.specify.md
.opencode/instructions/: backend.instructions.md  backend.md  conventions.instructions.md  database.instructions.md  database.md  frontend.instructions.md  frontend.md  tests.instructions.md  tests.md
.opencode/prompts/: 000-changelog.prompt.md  000-setup-constitution.prompt.md  001-boostrap-proyecto.tasks.prompt.md  001-bootstrap-proyecto.analyze.prompt.md  001-bootstrap-proyecto.clarify.prompt.md  001-bootstrap-proyecto.fix-report.prompt.md  001-bootstrap-proyecto.implement.prompt.md  001-bootstrap-proyecto.plan.prompt.md  001-bootstrap-proyecto.spec.prompt.md  001-bootstrap-proyecto.specify.prompt.md  001-bootstrap-proyecto.tasks.prompt.md  002-blindar-tokens-visuales.analyze.prompt.md  002-blindar-tokens-visuales.clarify.prompt.md  002-blindar-tokens-visuales.fix-report.prompt.md  002-blindar-tokens-visuales.governance.prompt.md  002-blindar-tokens-visuales.implement.prompt.md  002-blindar-tokens-visuales.plan.prompt.md  002-blindar-tokens-visuales.spec.prompt.md  002-blindar-tokens-visuales.specify.prompt.md  002-blindar-tokens-visuales.tasks.prompt.md  003-redisenar-home.analyze.prompt.md  003-redisenar-home.clarify.prompt.md  003-redisenar-home.plan.prompt.md  003-redisenar-home.spec.prompt.md  003-redisenar-home.specify.prompt.md  004-propiedades-base.analyze.prompt.md  004-propiedades-base.clarify.prompt.md  004-propiedades-base.fix-report.prompt.md  004-propiedades-base.implement.prompt.md  004-propiedades-base.plan.prompt.md  004-propiedades-base.spec.prompt.md  004-propiedades-base.specify.prompt.md  004-propiedades-base.tasks.prompt.md  005-dashboard-datos-reales.analyze.prompt.md  005-dashboard-datos-reales.clarify.prompt.md  005-dashboard-datos-reales.fix-report.prompt.md  005-dashboard-datos-reales.implement.prompt.md  005-dashboard-datos-reales.plan.prompt.md  005-dashboard-datos-reales.spec.prompt.md  005-dashboard-datos-reales.specify.prompt.md  (+16 more)
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 001_bootstrap_extensions.py  002_create_propiedades.py
app/: __init__.py  config.py  database.py  main.py
app/config/: __init__.py  paths.py  settings.py
app/infra/: database.py
app/modules/: __init__.py
app/templates/: base.html  dashboard.html
config/: app.example.yaml  models.yaml
docs/testing/: mutation-testing.md  test-value-audit.md
infra/: docker-compose.yaml
scripts/: backend.sh  changelog.sh  check.sh  clean.sh  context.sh  create.sh  dev-setup.sh  dev.sh  down.sh  format.sh  install-git-hooks.sh  lint.sh  reset.sh  up.sh  visual-check.sh
scripts/ci/: auto-checks.sh  check.sh  clean.sh  coverage.sh  forbid-yml-files.sh  format-docstrings.py  format.sh  mutation.sh  test.sh  typecheck.sh
scripts/db/: create-migration.sh  down.sh  reset.sh  up.sh
scripts/dev/: backend.sh  db_preflight.py  seed_propiedades.py  server.sh
scripts/hooks/: post-commit.changelog
scripts/tools/: changelog.sh  check-visual-trace.sh  context.sh  sync-agent-models.sh
specs/001-bootstrap-proyecto/: data-model.md  plan.md  quickstart.md  report.md  research.md  spec.md  tasks.md
specs/002-blindar-tokens-visuales/: data-model.md  plan.md  quickstart.md  report.md  reporte.md  research.md  spec.md  tasks.md
specs/003-redisenar-home/: data-model.md  plan.md  quickstart.md  report.md  research.md  spec.md  tasks.md
specs/004-propiedades-base/: data-model.md  plan.md  quickstart.md  report.md  research.md  spec.md  tasks.md
specs/005-dashboard-datos-reales/: data-model.md  plan.md  quickstart.md  report.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_dashboard.py  test_health.py
(+101 files in other folders)
