[project]
name = "realtor"
version = "0.1.0"
description = "Sistema de gestión inmobiliaria Realtor"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "scalar-fastapi>=1.0,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.18,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.14,<2.0",
    "testcontainers>=4.0,<5.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "app.modules.*"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
