[project]
name = "realtor"
version = "0.1.0"
description = "Sistema de gestión inmobiliaria Realtor"
requires-python = ">=3.13.13"
dependencies = [
    "fastapi[standard]>=0.138,<1.0",
    "scalar-fastapi>=1.0,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings[yaml]>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.18,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "mutmut>=3.6.0",
    "mypy>=1.14,<2.0",
    "pre-commit>=4.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16,<1.0",
    "testcontainers>=4.0,<5.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
extend-select = ["D213"]
ignore = ["D200", "D212"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
skip-magic-trailing-comma = false

[[tool.mypy.overrides]]
module = "app.modules.*"
strict = true

[[tool.mypy.overrides]]
module = "app.config.settings"
strict = true
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D104", "D107", "D200", "D203", "D212", "D413"]

[tool.mutmut]
source_paths = ["app/"]
do_not_mutate = [
    "app/**/__init__.py",
    "app/**/routes.py",
    "app/main.py",
    "app/infra/**",
    "app/config/**",
    "app/modules/health/*",
]
pytest_add_cli_args_test_selection = [
    "tests/unit/dashboard/test_repository.py",
    "tests/unit/dashboard/test_service.py",
    "tests/unit/propiedades/test_models.py",
    "tests/unit/propiedades/test_schemas.py",
    "tests/unit/propiedades/test_schemas_form.py",
    "tests/unit/propiedades/test_service_crear_formulario.py",
    "tests/unit/propiedades/test_service_listar.py",
]
pytest_add_cli_args = ["-o", "pythonpath=mutants/.."]
also_copy = ["config/"]
max_stack_depth = 8
mutate_only_covered_lines = true
